--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -1009,6 +1009,86 @@ ggplot(df, aes(x, y)) +
   stat_voronoi(geom = "path") 
 ```
 
+```{r}
+ggplot(df, aes(x, y)) +
+  stat_voronoi(geom = "path") +
+  geom_point() 
+
+```
+
+```{r}
+ggplot(df, aes(x, y)) +
+  stat_voronoi(geom = "path",
+               color = 4,      # Color of the lines
+               lwd = 0.7,      # Width of the lines
+               linetype = 1) + # Type of the lines
+  geom_point()
+```
+
+```{r}
+
+ggplot(df, aes(x, y, fill = dist)) +
+  geom_voronoi() +
+  geom_point() 
+ 
+
+```
+
+```{r}
+ggplot(df, aes(x, y, fill = dist)) +
+  geom_voronoi() +
+  stat_voronoi(geom = "path") +
+  geom_point() 
+
+```
+
+```{r}
+ggplot(df, aes(x, y, fill = dist)) +
+  geom_voronoi(alpha = 0.75) +
+  stat_voronoi(geom = "path") +
+  geom_point() 
+
+```
+
+```{r}
+ggplot(df, aes(x, y, fill = dist)) +
+  geom_voronoi() +
+  stat_voronoi(geom = "path") +
+  geom_point() +
+  scale_fill_gradient(low = "#F9F9F9",
+                      high = "#312271") 
+ 
+
+```
+
+```{r}
+ggplot(df, aes(x, y, fill = dist)) +
+  geom_voronoi() +
+  stat_voronoi(geom = "path") +
+  geom_point() +
+  theme(legend.position = "none") 
+
+```
+
+### Bounding box
+
+```{r}
+# Circle
+s <- seq(0, 2 * pi, length.out = 3000)
+circle <- data.frame(x = 120 * (1 + cos(s)),
+                     y = 120 * (1 + sin(s)),
+                     group = rep(1, 3000))
+
+ggplot(df, aes(x, y, fill = dist)) +
+  geom_voronoi(outline = circle,
+               color = 1, size = 0.1) +
+  scale_fill_gradient(low = "#B9DDF1",
+                      high = "#2A5783",
+                      guide = FALSE) +
+  theme_void() +
+  coord_fixed()
+```
+
 ------------------------------------------------------------------------
 
 # **Qualitative** {#qualitative}
